--- a/html/one.html
+++ b/html/one.html
@@ -5,8 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="div1">this is div1... we created it easily</div>
-    <div class="div2">this is div2</div>
+    
+    <div id="div1">this is<span>This is span</span> div1... we created it easily</div>
+    <div class="div2">this <div>this is another div</div>is div2</div>
     <p id="p1">This is paragraph p1</p>
     <p class="p2">This is paragraph p2</p>
     <input type="text" name="" id="">
